# openloomi

./: .gitignore  .prettierignore  CONTRIBUTING.md  README-ja.md  README-zh.md  README.md  package.json  pnpm-lock.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.clawhub/: lock.json
.github/workflows/: release.yml
Casks/: openloomi.rb
apps/marketing/: .gitignore  README.md  eslint.config.mjs  jsconfig.json  mdx-components.js  package.json  source.config.ts  tsconfig.json
apps/pet/: README.md  main.js  package.json  preload.js
apps/web/: .env.example  instrumentation.ts  next.config.js  package.json  proxy.ts  tsconfig.json  vitest.config.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
apps/web/src-tauri/.cargo/: config.toml
apps/web/src-tauri/capabilities/: default.json  loomi-pet.json
apps/web/src-tauri/permissions/: commands.toml
apps/web/src-tauri/resources/: dmg_DS_Store  loading.html
apps/web/src-tauri/scripts/: beautify-dmg.js  gen-dmg-background.js
apps/web/src-tauri/src/: cli.rs  close_behavior.rs  constants.rs  launch_mode.rs  lib.rs  lifecycle.rs  main.rs  menu.rs  node.rs  panic_guard.rs  render_runtime.rs  runtime_components.rs  system.rs  tray.rs  update.rs
apps/web/src-tauri/src/pet/: aux_position.rs  bubble.rs  card.rs  config_watcher.rs  dev_panel.rs  dock.rs  macos_window.rs  mod.rs  state.rs  theme.rs  watcher.rs  window.rs
apps/web/src-tauri/tests/: update_test.rs
benchmark/beam/: .gitignore  README.md  package.json
benchmark/clbench/: README.md  biome.json  package.json  tsconfig.json
benchmark/gdpval/: .env.example  .gitignore  README.md  package.json
benchmark/gdpval-official/: README.md  SOURCE_URLS.txt
benchmark/jobbench/: .env.example  .gitignore  README.md  package.json
benchmark/locomo/: README.md  package.json
benchmark/longmemeval/: README.md  package.json  results_sample.json
plugins/claude/: README.md  WALKTHROUGH.md
plugins/codex/: README.md  ROADMAP.md  WALKTHROUGH.md
skills/openloomi-api/: SKILL.md
skills/openloomi-connectors/: SKILL.md
skills/openloomi-feature-guide/: SKILL.md
skills/openloomi-loop/: .gitignore  SKILL.md  loop-ctl.sh
skills/openloomi-memory/: SKILL.md
(+731 files in other folders)
